# hololens_mapper

./: .gitignore  .gitignore.orig  Mapper.py  README.md  README.md.orig  environment.yml  environment.yml.orig  init.sh  init.sh.orig  mapper_benchmark.py
benchmarks/: mapper_benchmark.py  mapper_munich.py
exe/: DesnePointcloudFiltering.py  KeyframeSelector.py  VisibilityEstimation.py
pipelines/: dense_map_creator_holo2_2022_05.mg  dense_mapping_example.mg  dense_model_creation_pipeline_2021_12.mg  dense_model_creation_pipeline_2022_01.mg  dense_pipeline_2022_03.mg  dense_pipeline_2022_04.mg  dense_pipeline_holo2_2022_03.mg  dense_pipeline_holo2_2022_04.mg  dense_pipeline_holo2_2022_04b.mg  dense_pipeline_holo2_2022_05.mg  dense_pipeline_holo2_2022_06.mg  dense_pipeline_holo2_2022_07.mg  hloc_map_composition.mg  hloc_map_creation_pipeline_2021_12.mg  hololens1_downloader.mg  hololens2_downloader.mg  localization_broca_hospital.mg  map_creator_broca.mg
src/arfundation/: ARFundationIO.py
src/colmap/: Colmap.py  ColmapIO.py  ColmapIO.py.orig
src/hloc/: Hloc.py
src/holo/: HoloIO.py  HoloIO2.py
src/holo/coloredDensePoints/: CMakeLists.txt  composeColoredPointcloud.cpp
src/meshroom/: Meshroom.py  MeshroomIO.py  MeshroomIO.py.orig
src/meshroom/MeshroomCpp/: CMakeLists.txt  CMakeLists.txt.orig  MeshroomCpp.cpp
src/utils/: UtilsContainers.py  UtilsKeyframes.py  UtilsMatcher.py  UtilsMath.py  UtilsMath.py.orig  UtilsSingularity.py
src/utils/renderDepth/: CMakeLists.txt  renderDepth.cpp  test.py
src/utils/srcRenderDepth/: CMakeLists.txt  CMakeLists.txt.orig  renderDepth.cpp  renderDepth.cpp.orig  test.py
tests/: test_igraph.py  test_patchmatchnet.py
